# sellshoes

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: cicd.yml
Tasks/: [#SLS-001]--create-user-account.md  [#SLS-002]--django-rest-frame-work-setup.md  [#SLS-003]--api-documentation-setup.md  [#SLS-004]--email-configuration-setup.md  [#SLS-005]--media-storage-configuration-setup copy.md  [#SLS-005]--media-storage-configuration-setup.md  [#SLS-006]--user-signup-endpoints.md  [#SLS-007]--user-login-endpoints.md  [#SLS-008]--transition-docker.md  [#SLS-009]--market-place-setup.md  [#SLS-010]--products-apis.md  [#SLS-011]--cart-apis.md  [#SLS-012]--shipping-address-api.md  [#SLS-013]--payment-api.md  [#SLS-014]--checkout-apis.md
sellshoes/: env_sample  manage.py  pyproject.toml  pytest.ini  requirements.txt  sellshoes.env
sellshoes/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
sellshoes/accounts/migrations/: 0001_initial.py  0002_alter_customuser_email.py
sellshoes/accounts/test/: test_login.py  test_signup.py
sellshoes/marketplace/: admin.py  models.py  serializers.py  urls.py  views.py
sellshoes/marketplace/migrations/: 0001_initial.py  0002_product_image.py
sellshoes/sellshoes/: asgi.py  settings.py  urls.py  wsgi.py
