[tool.poetry]
name = "sellshoes"
version = "0.1.0"
description = ""
authors = ["believeohiozua <believe.ohiozua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.8.1"
django = "5.1.4"
python-decouple = "3.8"
sqlparse = "0.5.3"
django-cors-headers = "4.6.0"
djangorestframework = "^3.15.2"
drf-yasg = "^1.21.8"
django-filter = "^24.3"
cloudinary = "^1.41.0"
dj-database-url = "^2.3.0"
psycopg = "^3.2.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
